03-Gateway_Ingress/05-TCP-FORWARDING/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  labels:
    app: helloworld
    service: helloworld
spec:
  ports:
    - port: 8080
      name: http-web
      targetPort: 80
      protocol: TCP
    - port: 8443
      name: https-web
      targetPort: 443
      protocol: TCP
  selector:
    app: helloworld
