03-Gateway_Ingress/05-TCP-FORWARDING/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-vs
spec:
  hosts:
    - "*"
  gateways:
    - helloworld-gateway
  tcp:
    - match:
        - port: 80
      route:
        - destination:
            host: helloworld.default.svc.cluster.local
            port:
              number: 8080
    - match:
        - port: 443
      route:
        - destination:
            host:  helloworld.default.svc.cluster.local
            port:
              number: 8443
